Fix JWT auth wiring, schema management, security config, and add Swagger
- Wire OAuth2 JWT resource server into security filter chain (previously missing, causing all requests to return 401)
- Remove conflicting javax.persistence-api 2.2 dependency (DAOs use jakarta.persistence)
- Add spring.jpa.hibernate.ddl-auto (update for local, validate for prod)
- Externalize DB and GitHub OAuth2 credentials to env vars in prod and local profiles
- Add PUT/DELETE to CORS allowed methods
- Read CORS allowed origin from frontend.url property instead of hardcoding
- Permit /swagger-ui/** and /v3/api-docs/** endpoints publicly
- Add springdoc-openapi-starter-webmvc-ui 2.2.0 dependency
- Configure JWT Bearer security scheme for Swagger UI

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>